# botEmailDiscord

./: .gitignore  main.py  pyproject.toml  requirements.txt
comandos/: EnviarEmail.py  ExibirSeguindos.py  Perfil.py  RegistrarServidor.py  RegistrarSocial.py  RegistrarUsuario.py  Tutorial.py  ping.py
models/: RedeSocial.py  Seguindo.py  Servidor.py  Usuario.py  db.py
